packages/jsii/test/negatives/neg.implementation-changes-types.4.ts
export class Superclass {}
export class Subclass extends Superclass {}

export interface ISomething {
  something: Superclass;
}

export class SomethingImpl implements ISomething {
  public something: Subclass = new Subclass();
}
